[gd_scene load_steps=17 format=3 uid="uid://d4ffsob233px3"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_iesbu"]
[ext_resource type="Texture2D" uid="uid://ccortpq844o50" path="res://Assets/Sprites/blue_body_square.png" id="1_q6lw0"]
[ext_resource type="Texture2D" uid="uid://dcflk0ow3g3lu" path="res://Assets/Sprites/face_f.png" id="2_e724c"]
[ext_resource type="PackedScene" uid="uid://dpm1fv8u832uq" path="res://Scenes/hurtbox.tscn" id="4_kr5mb"]
[ext_resource type="FontFile" uid="uid://jh3tay3nrsx5" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="5_j2h7l"]
[ext_resource type="FontFile" uid="uid://d1kg6oeckcu3m" path="res://Assets/Fonts/Jaro-Regular-VariableFont_opsz.ttf" id="5_jg4df"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujlwo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2uf7u"]
size = Vector2(66.6667, 63.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_2tqa0"]
radius = 617.567

[sub_resource type="CircleShape2D" id="CircleShape2D_1mlpq"]
radius = 136.829

[sub_resource type="CircleShape2D" id="CircleShape2D_on547"]
radius = 20.2759

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtpkc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32315"]
bg_color = Color(0, 0.698039, 0.509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqp1o"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mv7k4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ac7vq"]
bg_color = Color(0, 0.737255, 0.231373, 1)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_iesbu")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_q6lw0")

[node name="Face" type="Sprite2D" parent="."]
texture = ExtResource("2_e724c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.96705e-07)
shape = SubResource("RectangleShape2D_ujlwo")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource("4_kr5mb")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(2.38419e-06, 1.66667)
shape = SubResource("RectangleShape2D_2uf7u")

[node name="Attack" type="Node2D" parent="."]

[node name="StarTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="StarAttackTimer" type="Timer" parent="Attack/StarTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="HandBase" type="Area2D" parent="Attack"]

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_2tqa0")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_1mlpq")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_on547")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exp" type="ProgressBar" parent="HUD/Control"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 11.0
theme_override_styles/background = SubResource("StyleBoxFlat_xtpkc")
theme_override_styles/fill = SubResource("StyleBoxFlat_32315")
show_percentage = false

[node name="LevelLabel" type="Label" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jg4df")
theme_override_font_sizes/font_size = 16
text = "Level: 0"
horizontal_alignment = 1

[node name="LevelUpPanel" type="Panel" parent="HUD/Control"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -70.5
offset_right = 79.0
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pqp1o")

[node name="Label" type="Label" parent="HUD/Control/LevelUpPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 1.0
offset_right = 50.0
offset_bottom = 22.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_jg4df")
theme_override_font_sizes/font_size = 14
text = "Level-Up"
horizontal_alignment = 1

[node name="Upgrades" type="VBoxContainer" parent="HUD/Control/LevelUpPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 20.0
offset_right = -4.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="GameOver" type="Control" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="HUD/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jg4df")
theme_override_font_sizes/font_size = 50
text = "Game Over!"

[node name="Time" type="Label" parent="HUD/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_j2h7l")
text = "Time: "
horizontal_alignment = 1

[node name="Healthbar" type="ProgressBar" parent="."]
offset_left = -87.0
offset_top = 47.0
offset_right = 87.0
offset_bottom = 74.0
theme_override_styles/background = SubResource("StyleBoxFlat_mv7k4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ac7vq")
value = 50.0
show_percentage = false

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/StarTimer" to="." method="_on_star_timer_timeout"]
[connection signal="timeout" from="Attack/StarTimer/StarAttackTimer" to="." method="_on_star_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="Hurtbox"]
